EN-2265 Created API for retrieving components from Digital Exchange instances (#739)
* EN-2265 Added service and controller for retrieving components from DE instances; Added test for the service

* EN-2265 completed tests; added error messages

* EN-2265 Fixed tests

* EN-2265 Refactoring of filter and sort in services

* EN-2265 Implemented general client for handling requests to multiple DE instances; Little fix in AuthRequestBuilder; Added tests

* Moved common test dependencies into parent pom

* EN-2265 Minor changes